--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,17 @@
 [project]
 name = "pixiv2epub"
 version = "0.1.0"
-description = "Add your description here"
+description = "A tool to download novels from Pixiv and convert them into EPUB format."
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "beautifulsoup4>=4.13.5",
+    "jinja2>=3.1.6",
+    "pixivpy3>=3.7.5",
+    "rich>=14.1.0",
+]
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.30.1",
+]
