--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ dependencies = [
     "rich>=14.1.0",
 ]
 
+[project.scripts]
+pixiv2epub = "pixiv2epub.cli:main"
+
 [dependency-groups]
 dev = [
     "ipykernel>=6.30.1",
