Refactor and enhance error handling across the application
- Introduced custom exception classes for better error categorization: Pixiv2EpubError, ConfigError, AuthenticationError, DownloadError, BuildError, and InvalidInputError.
- Updated the BaseBuilder class to raise BuildError when detail.json is missing.
- Enhanced EpubBuilder to raise BuildError with specific messages on build failures.
- Improved CLI argument parsing and error handling, ensuring clearer user feedback.
- Refactored the Coordinator class to handle cleanup of intermediate files and empty parent directories.
- Updated PixivProvider to raise DownloadError for API call failures.
- Removed outdated config_loader and logging_setup utilities, integrating their functionality into config and logging modules.
- Enhanced URL parsing utility to provide clearer error messages for invalid inputs.
- Updated constants for better directory structure in output files.
- Improved date formatting in PixivDataPersister for better readability.

--- a/configs/config.toml.example
+++ b/configs/config.toml.example
@@ -43,6 +43,9 @@ series_filename_template = "{author_name}/{series_title}/[{author_name}] {series
 # EPUBに適用するCSSファイルへのパス (一時保存先ディレクトリからの相対パス)
 css_file = "styles/style.css"
 
+# trueに設定すると、EPUB生成後にダウンロードした生データ（中間ファイル）を自動的に削除します。
+# コマンドラインで --cleanup または --no-cleanup を指定すると、この設定は上書きされます。
+cleanup_after_build = false
 
 # ------------------------------------------------------------------------------
 # 認証設定
