feat: Overhaul project structure and add robust configuration
Refactors the entire project to align with modern Python library standards for improved maintainability and developer experience.

- **Restructure Project**:
  - Adopts a standard `src` layout with dedicated directories for core logic (`core`), data models (`models`), and static assets (`assets`).
  - Segregates data models into `models/pixiv.py` (API-specific) and `models/local.py` (internal).
  - Isolates image download logic into a new `providers/pixiv/downloader.py` class, enforcing the Single Responsibility Principle.

- **Implement Robust Configuration**:
  - Replaces the manual config loading script with `pydantic-settings`.
  - Establishes a hierarchical settings system: CLI args > environment variables > `.env` file > `pyproject.toml` defaults.
  - Adds a `.env.example` file for clear guidance on required environment variables.

- **Add Default Styling**:
  - Includes a simple, readability-focused `styles/style.css` for default EPUB styling.

- **Bug Fixes**:
  - Resolves `TypeError` crashes that occurred when running without the `--config` flag or when handling environment variables.
  - Cleans up all unused imports identified during testing.

--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,9 @@ wheels/
 # Jupyter Notebook
 *.ipynb
 
-# config files
-configs/*.toml
+# local settings
+.env
 
 # novel files
 pixiv_raw
 epubs
-
-# list
-novels.txt
