--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,47 @@ dependencies = [
     "jinja2>=3.1.6",
     "pixivpy3>=3.7.5",
     "rich>=14.1.0",
+    "pydantic-settings>=2.11.0",
 ]
 
 [project.scripts]
 pixiv2epub = "pixiv2epub.cli:main"
 
-[dependency-groups]
-dev = [
-    "ipykernel>=6.30.1",
-]
+# --- アプリケーションのデフォルト設定 ---
+[tool.pixiv2epub]
+[tool.pixiv2epub.downloader]
+save_directory = "./pixiv_raw"
+raw_dir_template = "{author_name}/{id}_{title}"
+series_dir_template = "{author_name}/series_{id}_{title}"
+api_delay = 1.0
+api_retries = 3
+overwrite_existing_images = false
+
+[tool.pixiv2epub.builder]
+output_directory = "./epubs"
+filename_template = "{author_name}/{title}.epub"
+series_filename_template = "{author_name}/{series_title}/[{author_name}] {series_title} - {title}.epub"
+css_file = "styles/style.css"
+cleanup_after_build = false
+
+[tool.pixiv2epub.compression]
+enabled = true
+skip_if_larger = true
+max_workers = 4
+
+[tool.pixiv2epub.compression.pngquant]
+colors = 256
+quality = "65-90"
+speed = 3
+strip = true
+
+[tool.pixiv2epub.compression.jpegoptim]
+max_quality = 85
+strip_all = true
+progressive = true
+preserve_timestamp = true
+
+[tool.pixiv2epub.compression.cwebp]
+quality = 75
+lossless = false
+metadata = "none"
