refactor(architecture): Implement Workspace pattern
Refactors the core application to decouple the data provider and the EPUB builder. This change introduces the "Workspace" pattern, a standardized, self-contained directory that serves as an explicit contract, replacing the previous implicit filesystem-based interface.

- Provider modules now generate a unique `Workspace` for each novel download, containing all necessary source data and assets.
- Builder modules now consume `Workspace` objects as input, making them data-source agnostic.
- The `Coordinator` orchestrates the `Workspace` lifecycle, from creation by the Provider to consumption by the Builder and final cleanup.
- Configuration in `pyproject.toml` is updated to define a root directory for temporary workspaces, deprecating the old setting.
- Cleanup logic is significantly simplified to remove the entire atomic workspace directory.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,11 @@ dependencies = [
 pixiv2epub = "pixiv2epub.cli:main"
 
 # --- アプリケーションのデフォルト設定 ---
+[tool.pixiv2epub.workspace]
+root_directory = "./.pixiv2epub_work"
+
 [tool.pixiv2epub]
 [tool.pixiv2epub.downloader]
-save_directory = "./pixiv_raw"
-raw_dir_template = "{author_name}/{id}_{title}"
-series_dir_template = "{author_name}/series_{id}_{title}"
 api_delay = 1.0
 api_retries = 3
 overwrite_existing_images = false
