--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "rich>=14.1.0",
     "pydantic-settings>=2.11.0",
 ]
+[dependency-groups]
+dev = ["ipykernel>=6.30.1"]
 
 [project.scripts]
 pixiv2epub = "pixiv2epub.cli:main"
