feat: Implement persistent workspaces and differential updates
This major refactor overhauls the application's core logic to transform it from a stateless converter into an intelligent library management tool. It introduces persistent, ID-based workspaces and a robust change detection mechanism.

Key changes include:

- **Persistent Workspaces**:
  - Replaced random UUID-based workspace directories with a deterministic `pixiv_{novel_id}` structure for data persistence and reusability.

- **Semantic Content Fingerprinting**:
  - Implemented a content hashing mechanism to detect novel updates accurately.
  - The provider now performs a lightweight check and only proceeds with a full download if the content hash has changed, significantly speeding up consecutive runs.

- **Deterministic EPUB ID**:
  - Replaced random `uuid.uuid4()` for the book identifier with a stable `uuid.uuid5()` based on the novel's ID. This ensures regenerated EPUBs are correctly treated as updates by e-readers.

- **Efficient Image Handling**:
  - The update process now preserves the `assets/images` directory, preventing the unnecessary re-download of existing images when only text or metadata has changed.
  - Fixed a critical bug where image paths were not being correctly rewritten during the build process, which caused images to be broken in the final EPUB file.

- **Code Refactoring**:
  - Added `canonicaljson` dependency for reliable data normalization before hashing.
  - Moved hashing logic to a new `fingerprint.py` module for better separation of concerns.
  - Extended `WorkspaceManifest` to store the content hash.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pixivpy3>=3.7.5",
     "rich>=14.1.0",
     "pydantic-settings>=2.11.0",
+    "canonicaljson>=2.0.0",
 ]
 [dependency-groups]
 dev = ["ipykernel>=6.30.1"]
