feat(auth): Add interactive auth command and automated setup
This commit introduces a comprehensive new authentication and setup workflow to streamline the user experience from initial setup to execution.

It adds an interactive `auth` command and a fully automated `setup` task using a task runner.

### New `auth` Command
- An `auth` subcommand is added to the CLI.
- It uses Playwright to launch a browser, allowing the user to interactively log in to Pixiv.
- Upon success, it automatically creates a `.env` file with the necessary refresh token.

### Build & Setup Automation
- The project is now a formal Python package with a `[build-system]` defined in `pyproject.toml`.
- `poethepoet` is introduced as a task runner to automate complex workflows.
- A new `poe setup` command now handles the complete installation process:
    1. Installs required system-level dependencies for Playwright (`playwright install-deps`).
    2. Downloads the necessary browser binaries (`playwright install`).
    3. Installs the project and its Python dependencies in editable mode.

### Code Quality & Refinements
- The authentication flow's error handling is made more robust by using the project-specific `AuthenticationError` instead of generic exceptions.
- The authentication logic has been moved to `src/pixiv2epub/core/auth.py` for better project structure and cohesion.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,27 @@ dependencies = [
     "rich>=14.1.0",
     "pydantic-settings>=2.11.0",
     "canonicaljson>=2.0.0",
+    "playwright>=1.55.0",
+    "requests>=2.32.5",
 ]
 [dependency-groups]
-dev = ["ipykernel>=6.30.1"]
+dev = ["ipykernel>=6.30.1", "poethepoet>=0.37.0"]
 
 [project.scripts]
 pixiv2epub = "pixiv2epub.cli:main"
+
+# --- ビルドシステムの定義 ---
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+# --- poethepoetのタスク定義 ---
+[tool.poe.tasks]
+setup = [
+    { cmd = "playwright install-deps" },
+    { cmd = "playwright install" },
+    { cmd = "uv pip install -e ." },
+]
 
 # --- アプリケーションのデフォルト設定 ---
 [tool.pixiv2epub.workspace]
