--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,10 @@ dependencies = [
     "canonicaljson>=2.0.0",
     "playwright>=1.55.0",
     "requests>=2.32.5",
+    "poethepoet>=0.37.0",
 ]
 [dependency-groups]
-dev = ["ipykernel>=6.30.1", "poethepoet>=0.37.0"]
+dev = ["ipykernel>=6.30.1"]
 
 [project.scripts]
 pixiv2epub = "pixiv2epub.cli:main"
