feat(gui): Implement persistent, interactive GUI mode
This commit introduces a new `gui` command that launches a persistent, interactive browser session, allowing users to trigger downloads directly from Pixiv web pages.

The implementation is centered around Playwright, using `page.expose_function` to create a direct bridge between the browser's JavaScript context and the Python backend, avoiding the need for a separate web server.

Key features and fixes include:

- **Interactive UI:** A JavaScript payload (`injector.js`) is injected into pages to render a download button and status panel.
- **Persistent Sessions:** The `gui` command saves and loads login sessions from a local `.gui_session` directory to eliminate the need for repeated logins.
- **Auth Integration:** The `auth` command now creates and overwrites the `.gui_session` data upon successful login, provisioning the login state for the `gui` command.
- **Robust SPA Handling:** The injected script is now stateful, correctly handling in-page navigations to ensure the UI is always up-to-date and responsive.
- **Bug Fixes:** Resolves previous issues including an `AttributeError` typo in the CLI, the UI not updating on navigation, and unresponsive buttons.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ setup = [
     { cmd = "playwright install" },
     { cmd = "uv pip install -e ." },
 ]
+build = [{ cmd = "uv pip install -e ." }]
 
 # --- アプリケーションのデフォルト設定 ---
 [tool.pixiv2epub.workspace]
