docs: Add GUI mode to README

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@
 # バージョン管理にコミットしないでください。
 
 # Pixiv APIとの認証に必要なリフレッシュトークン。
-# 取得方法については、ウェブ上のガイドなどを参照してください。
+# 取得方法については、github上のガイドなどを参照してください。
 PIXIV2EPUB_AUTH__REFRESH_TOKEN="your_refresh_token_here"
