--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,18 +7,20 @@ requires-python = ">=3.13"
 dependencies = [
     "jinja2>=3.1.6",
     "pixivpy3>=3.7.5",
-    "rich>=14.1.0",
+    "rich>=14.2.0",
     "pydantic-settings>=2.11.0",
     "canonicaljson>=2.0.0",
     "playwright>=1.55.0",
     "requests>=2.32.5",
     "poethepoet>=0.37.0",
+    "loguru>=0.7.3",
+    "typer>=0.19.2",
 ]
 [dependency-groups]
 dev = ["ipykernel>=6.30.1"]
 
 [project.scripts]
-pixiv2epub = "pixiv2epub.cli:main"
+pixiv2epub = "pixiv2epub.cli:app"
 
 # --- ビルドシステムの定義 ---
 [build-system]
