--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
 dev = ["ipykernel>=6.30.1"]
 
 [project.scripts]
-pixiv2epub = "pixiv2epub.cli:app"
+pixiv2epub = "pixiv2epub.entrypoints.cli:app"
 
 # --- ビルドシステムの定義 ---
 [build-system]
