--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "poethepoet>=0.37.0",
     "loguru>=0.7.3",
     "typer>=0.19.2",
+    "python-dotenv>=1.1.1",
 ]
 [dependency-groups]
 dev = ["ipykernel>=6.30.1"]
