refactor: Implement FANBOX API client and data models for response mapping

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,7 @@
 # バージョン管理にコミットしないでください。
 
 # Pixiv APIとの認証に必要なリフレッシュトークン。
-# 取得方法については、github上のガイドなどを参照してください。
-PIXIV2EPUB_AUTH__REFRESH_TOKEN="your_refresh_token_here"
+# Fanboxでのダウンロードに必要なSESSID。
+# 取得方法については、authコマンドを利用してください。
+PIXIV2EPUB_PROVIDERS__PIXIV__REFRESH_TOKEN="your_refresh_token_here"
+PIXIV2EPUB_PROVIDERS__FANBOX__SESSID="your_fanbox_sessid_here"
