--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
 dev = ["ipykernel>=6.30.1"]
 
 [project.scripts]
-p2ec = "pixiv2epub.entrypoints.cli:app"
+piep = "pixiv2epub.entrypoints.cli:app"
 
 # --- ビルドシステムの定義 ---
 [build-system]
