Refactor string literals to use single quotes for consistency across the codebase
- Updated string literals in various files to use single quotes instead of double quotes.
- Ensured uniformity in string formatting and exception messages.
- Improved readability and maintainability of the code by adhering to a consistent style.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,10 +45,10 @@ setup = [
 build = [{ cmd = "uv pip install -e ." }]
 
 # Ruffによるフォーマット
-format = "ruff format src tests"
+format = "ruff format src"
 
 # RuffによるLint（自動修正なし）
-lint = "ruff check src tests"
+lint = "ruff check src"
 
 # RuffによるLint（自動修正あり）
 lint-fix = "ruff check src --fix"
